etc/envoy/envoy.yaml
node:
  id: node0
  cluster: cluster.local

static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 80 }
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              config:
                stat_prefix: ingress_http
                route_config:
                  name: route
                  virtual_hosts:
                    - name: nginx_service
                      domains: ["nginx.local"]
                      routes:
                        - match: { prefix: "/" }
                          route: { cluster: nginx_cluster }
                    - name: httpd_service
                      domains: ["httpd.local"]
                      routes:
                        - match: { prefix: "/" }
                          route: { cluster: httpd_cluster }
                http_filters:
                  - name: envoy.router
  clusters:
    - name: nginx_cluster
      connect_timeout: 0.25s
      lb_policy: ROUND_ROBIN
      type: STRICT_DNS
      load_assignment:
        cluster_name: nginx_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: envoy_test_nginx_1
                      port_value: 80
              - endpoint:
                  address:
                    socket_address:
                      address: envoy_test_nginx_2
                      port_value: 80
    - name: httpd_cluster
      connect_timeout: 0.25s
      lb_policy: ROUND_ROBIN
      type: STRICT_DNS
      load_assignment:
        cluster_name: httpd_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: envoy_test_httpd_1
                      port_value: 80
              - endpoint:
                  address:
                    socket_address:
                      address: envoy_test_httpd_2
                      port_value: 80
